--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
             - name: Run a one-line script
               run: echo Building mkdocs
 
-            # - name: Install python packages
-            #   run: pip install -r requirements.txt
+            - name: Install python packages
+              run: pip install -r requirements.txt
             # Runs a set of commands using the runners shell
             - name: run mkdocs
               run: |
