welcome page done

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,9 @@
 site_name: 100 Site Architecture
 site_url: https://100AutomationsArchitecture.com/
 nav:
-    - Home: index.md
+    - Welcome: index.md
+    - Getting started: gettingstarted.md
+    - Code: code.md
     - Code: code.md
 theme: readthedocs
 extra_css:
